--- a/yummy-red-1.0.0/assets/css/main.css
+++ b/yummy-red-1.0.0/assets/css/main.css
@@ -1,16 +1,3 @@
-/**
-* Template Name: Yummy
-* Template URL: https://bootstrapmade.com/yummy-bootstrap-restaurant-website-template/
-* Updated: Aug 07 2024 with Bootstrap v5.3.3
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
-
-/*--------------------------------------------------------------
-# Font & Color Variables
-# Help: https://bootstrapmade.com/color-system/
---------------------------------------------------------------*/
-/* Fonts */
 :root {
   --default-font: "Roboto",  system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --heading-font: "Amatic SC",  sans-serif;
@@ -234,7 +221,7 @@ h6 {
 }
 
 .header .logo img {
-  max-height: 36px;
+  max-block-size: 80px;
   margin-right: 8px;
 }
 
@@ -271,6 +258,7 @@ h6 {
 @media (max-width: 1200px) {
   .header .logo {
     order: 1;
+
   }
 
   .header .btn-getstarted {
@@ -559,6 +547,7 @@ h6 {
   font-size: 14px;
   padding: 40px 0;
   position: relative;
+  margin-top: 60px
 }
 
 .footer .icon {
@@ -798,11 +787,12 @@ section,
 --------------------------------------------------------------*/
 .hero {
   width: 100%;
-  min-height: 60vh;
+  min-height: 40px;
   position: relative;
   padding: 60px 0;
   display: flex;
   align-items: center;
+  margin-bottom: 30px;
 }
 
 .hero h1 {
@@ -1646,11 +1636,4 @@ section,
 
 .contact .php-email-form button[type=submit]:hover {
   background: color-mix(in srgb, var(--accent-color), transparent 20%);
-}
-
-/*--------------------------------------------------------------
-# Starter Section Section
---------------------------------------------------------------*/
-.starter-section {
-  /* Add your styles here */
 }
