--- a/yummy-red-1.0.0/assets/css/main.css
+++ b/yummy-red-1.0.0/assets/css/main.css
@@ -86,6 +86,10 @@ h6 {
   overflow: hidden;
 }
 
+.hero.container {
+  background-image: url('../img/hero_background.avif');
+}
+
 .pulsating-play-btn:before {
   content: "";
   position: absolute;
