--- a/Avordaw Live Kitchen/assets/css/main.css
+++ b/Avordaw Live Kitchen/assets/css/main.css
@@ -591,7 +591,7 @@ h6 {
 #preloader {
   position: fixed;
   inset: 0;
-  z-index: 9999;
+  z-index: 99;
   overflow: hidden;
   background-color: var(--background-color);
   transition: all 0.6s ease-out;
@@ -630,6 +630,9 @@ h6 {
   }
 }
 
+section, .section {
+  overflow: clip;
+}
 /*--------------------------------------------------------------
 # Scroll Top Button
 --------------------------------------------------------------*/
@@ -855,6 +858,9 @@ section,
   .hero .btn-get-started,
   .hero .btn-watch-video {
     font-size: 13px;
+  }
+  .sitename {
+    display: none !important;
   }
 }
 
@@ -1665,10 +1671,4 @@ section,
 
 .contact .php-email-form button[type=submit]:hover {
   background: color-mix(in srgb, var(--accent-color), transparent 20%);
-}
-
-[data-aos] {
-  opacity: 1 !important;
-  transform: none !important;
-  transition: none !important;
 }
